[gd_scene load_steps=7 format=3 uid="uid://b1lolhym8cg5v"]

[ext_resource type="Script" uid="uid://c671si4lo424v" path="res://scripts/dialogue_gui.gd" id="1_qd82c"]
[ext_resource type="Texture2D" uid="uid://b4rqu1ah4wdtt" path="res://assets/dialogue_icons/dialogue_anje.png" id="2_qd82c"]
[ext_resource type="Texture2D" uid="uid://whesy0op38em" path="res://assets/dialogue_icons/dialogue_ali.png" id="3_qd82c"]
[ext_resource type="Texture2D" uid="uid://576lnlgennk4" path="res://assets/ui/dialogue_box_npc.png" id="4_r48oa"]
[ext_resource type="Texture2D" uid="uid://lqurgtam6xm0" path="res://assets/ui/dialogue_box_player.png" id="5_qgkhm"]

[sub_resource type="SpriteFrames" id="SpriteFrames_myoxq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_r48oa")
}],
"loop": true,
"name": &"npc",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_qgkhm")
}],
"loop": true,
"name": &"player",
"speed": 5.0
}]

[node name="DialogueGUI" type="CanvasLayer"]
script = ExtResource("1_qd82c")

[node name="PlayerSprite" type="Sprite2D" parent="."]
position = Vector2(960, 540.5)
scale = Vector2(1.2, 1.2)
texture = ExtResource("2_qd82c")

[node name="NPCSprite" type="Sprite2D" parent="."]
position = Vector2(960, 540)
scale = Vector2(1.2, 1.2)
texture = ExtResource("3_qd82c")

[node name="DialogueBox" type="AnimatedSprite2D" parent="."]
position = Vector2(960, 540)
scale = Vector2(1.2, 1.2)
sprite_frames = SubResource("SpriteFrames_myoxq")
animation = &"npc"

[node name="DialogueText" type="RichTextLabel" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -773.0
offset_top = -347.0
offset_right = 651.0
offset_bottom = -85.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/default_color = Color(0.478431, 0.384314, 0.670588, 1)
theme_override_colors/font_shadow_color = Color(0.972549, 0.972549, 1, 1)
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/bold_italics_font_size = 40
theme_override_font_sizes/italics_font_size = 40
theme_override_font_sizes/mono_font_size = 40
theme_override_font_sizes/normal_font_size = 40
theme_override_font_sizes/bold_font_size = 40
bbcode_enabled = true
text = "Dialogue Dialogue Dialogue Dialogue Dialogue Dialogue Dialogue Dialogue Dialogue Dialogue Dialogue Dialogue Dialogue Dialogue Dialogue Dialogue Dialogue Dialogue Dialogue Dialogue Dialogue Dialogue Dialogue Dialogue "
visible_characters_behavior = 3

[node name="NPCName" type="Label" parent="."]
z_index = 1
offset_left = 222.0
offset_top = 633.0
offset_right = 630.0
offset_bottom = 688.0
theme_override_colors/font_color = Color(0.47451, 0.380392, 0.670588, 1)
theme_override_font_sizes/font_size = 40
text = "Character Name"
vertical_alignment = 1
autowrap_mode = 3

[node name="PlayerName" type="Label" parent="."]
z_index = 1
offset_left = 1248.0
offset_top = 634.0
offset_right = 1655.0
offset_bottom = 689.0
theme_override_colors/font_color = Color(0.47451, 0.380392, 0.670588, 1)
theme_override_font_sizes/font_size = 40
text = "Character Name"
vertical_alignment = 1
autowrap_mode = 3

[node name="Choices" type="VBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -360.0
offset_top = 242.0
offset_right = 360.0
offset_bottom = 578.0
grow_horizontal = 2
theme_override_constants/separation = 40
alignment = 1

[node name="AudioPlayer" type="AudioStreamPlayer" parent="."]

[node name="NextDialogue" type="Button" parent="."]
offset_left = 1614.0
offset_top = 912.0
offset_right = 1715.0
offset_bottom = 979.0
